2001-07-28  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c: Include "gdb_assert.h"
	(i386_register_convert_to_virtual): Fix such that it can handle
	conversion to any floating-point type.  Assert that we are dealing
	with a floating-point first.
	(i386_register_convert_to_raw): Assert that TYPE is a
	floating-point type with length 12.

2001-07-27  John R. Moore  <jmoore@redhat.com>

	* configure.in: Added dependency of gdb on tcl/tk libraries.
	* Makefile.in: Likewise.
	* configure: Regenerated with the above using autoconf.

2001-07-26  Elena Zannoni  <ezannoni@redhat.com>

	* sh-tdep.c (sh_gdbarch_init): Use SH_DEFAULT_NUM_REGS instead of
	NUM_REGS.
	(SH_DEFAULT_NUM_REGS): Define.

2001-07-26  Eli Zaretskii  <eliz@is.elta.co.il>

	* go32-nat.c (read_memory_region): Make sure the segment limit was
	indeed set, to work around a Windows 2000 bug.

2001-07-25  Daniel Jacobowitz  <drow@mvista.com>

	* infptrace.c (child_xfer_memory): Add cast to CORE_ADDR.
	* infttrace.c (child_xfer_memory): Likewise.
	* symm-nat.c (child_xfer_memory): Likewise.
	* gdbserver/low-hppabsd.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.
	* gdbserver/low-linux.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.
	* gdbserver/low-lynx.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.
	* gdbserver/low-nbsd.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.
	* gdbserver/low-sparc.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.
	* gdbserver/low-sun3.c (read_inferior_memory): Likewise.
	(write_inferior_memory): Likewise.

2001-07-25  Eli Zaretskii  <eliz@is.elta.co.il>

	* README: Mention how to make gdb.pdf.

	* NEWS: Update.

2001-07-24  Stephen P. Smith <ischis2@home.com>

	* MAINTAINERS (Stephen P. Smith): Added to write after approval 
	list.

2001-07-23  Andrew Cagney  <ac131313@redhat.com>

	* mips-tdep.c (mips_push_arguments): Add comment explaining